# skillplot

./: .gitignore  README.md  pyproject.toml
skillplot/: entry.py
skillplot/example_data/: programmer_skills.yaml  programmer_skills_v.yaml
skillplot/io/: plot_data.py
skillplot/plot/: bar.py  grid.py
skillplot/utils/: cli_helpers.py
